feat(semantics): enforce LAST_WRITE, EPHEMERAL, COLLECT, and BARRIER channel semantics
LAST_WRITE (#13): send_message checks existing messages on the channel.
Same sender → overwrite in place (same message ID, no new row). Different
sender → IllegalStateException identifying the current writer. Prevents
the silent last-writer-wins race condition.

EPHEMERAL (#14): check_messages fetches messages then deletes them within
the same @Transactional scope — atomic delivery. Second read returns empty.
Single-consumer queue pattern for routing hints and transient context.

COLLECT (#15): check_messages delivers ALL accumulated non-EVENT messages
and clears the channel atomically. Ignores afterId cursor — COLLECT is
always a full-batch delivery. Next writes begin a new collection cycle.

BARRIER (#16): check_messages checks which barrierContributors have sent
at least one non-EVENT message. If any are still pending, returns empty +
barrierStatus = "Waiting for: alice, bob". When all have contributed,
delivers all messages, clears the channel (reset), and returns
barrierStatus = null. Non-contributor writes accumulate but don't count.

CheckResult gains optional barrierStatus field (null for non-BARRIER).
check_messages is now @Transactional (required for atomic read+delete).
Dispatch uses switch on ChannelSemantic enum; APPEND/LAST_WRITE fall
through to the existing cursor-based polling path.

24 new tests across 4 test classes. All 111 tests pass.

Closes #13, Closes #14, Closes #15, Closes #16
Refs #12